# grpc_ptp_sync

./: .gitignore
client/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
client/proto/: test.proto
client/src/: main.cpp
server/: CMakeLists.txt  README.md  conanfile.txt
server/proto/: test.proto
server/src/: main.cpp
